New validation API